--- a/app/src/main/res/layout/activity_biaya_jasa_.xml
+++ b/app/src/main/res/layout/activity_biaya_jasa_.xml
@@ -179,6 +179,27 @@
 
             </LinearLayout>
 
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/ly_discJasa_jumlah_harga_part"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:hint="@string/discount_jasa_uppercase"
+                android:visibility="gone">
+
+                <EditText
+                    android:id="@+id/et_discJasa"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:enabled="false"
+                    android:inputType="text"
+                    android:textSize="14sp"
+                    tools:ignore="Autofill,LabelFor" />
+
+            </android.support.design.widget.TextInputLayout>
+
+
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
