--- a/app/src/main/res/layout/activity_konfirmasi_data_pembayaran.xml
+++ b/app/src/main/res/layout/activity_konfirmasi_data_pembayaran.xml
@@ -37,7 +37,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="10dp"
-                    android:layout_marginRight="10dp">
+                    android:layout_marginRight="10dp"
+                    android:visibility="gone">
 
                     <com.rkrzmail.srv.NikitaAutoComplete
                         android:id="@+id/et_nopol"
@@ -74,7 +75,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"
-                    android:layout_marginRight="10dp">
+                    android:layout_marginRight="10dp"
+                    android:visibility="gone">
 
                     <com.rkrzmail.srv.NikitaAutoComplete
                         android:id="@+id/et_jenisKendaraan"
@@ -97,60 +99,6 @@
                     android:layout_gravity="center_vertical|right"
                     android:layout_marginRight="20dp"
                     android:visibility="gone" />
-
-            </FrameLayout>
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <android.support.design.widget.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginRight="10dp">
-
-                    <com.rkrzmail.srv.NikitaAutoComplete
-                        android:id="@+id/et_namaPelanggan"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="NAMA PELANGGAN"
-                        android:inputType="textCapCharacters|textPersonName"
-                        android:maxLength="30"
-                        android:textSize="14sp"
-                        android:padding="15dp"/>
-
-                </android.support.design.widget.TextInputLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_gravity="end"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginEnd="20dp">
-
-                    <ImageButton
-                        android:id="@+id/img_clear"
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
-                        android:background="@android:color/transparent"
-                        android:tint="@color/grey_80"
-                        app:srcCompat="@drawable/ic_close"
-                        android:visibility="gone"/>
-
-                    <ProgressBar
-                        android:id="@+id/pb_namaPelanggan"
-                        style="?android:attr/progressBarStyleSmall"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical|right"
-                        tools:ignore="RtlHardcoded"
-                        android:visibility="gone"/>
-
-                </LinearLayout>
 
             </FrameLayout>
 
@@ -208,6 +156,61 @@
 
             </LinearLayout>
 
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <android.support.design.widget.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="10dp">
+
+                    <com.rkrzmail.srv.NikitaAutoComplete
+                        android:id="@+id/et_namaPelanggan"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="NAMA PELANGGAN"
+                        android:inputType="textCapCharacters|textPersonName"
+                        android:maxLength="30"
+                        android:textSize="14sp"
+                        android:padding="15dp"/>
+
+                </android.support.design.widget.TextInputLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_gravity="end"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="20dp">
+
+                    <ImageButton
+                        android:id="@+id/img_clear"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:background="@android:color/transparent"
+                        android:tint="@color/grey_80"
+                        app:srcCompat="@drawable/ic_close"
+                        android:visibility="gone"/>
+
+                    <ProgressBar
+                        android:id="@+id/pb_namaPelanggan"
+                        style="?android:attr/progressBarStyleSmall"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical|right"
+                        tools:ignore="RtlHardcoded"
+                        android:visibility="gone"/>
+
+                </LinearLayout>
+
+            </FrameLayout>
+
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -216,9 +219,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_marginBottom="@dimen/paddingMedium"
                 android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingStart="@dimen/paddingMedium"
-                android:paddingEnd="@dimen/paddingMedium">
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="0dp"
