--- a/app/src/main/res/layout/item_jasalain_booking_checkin.xml
+++ b/app/src/main/res/layout/item_jasalain_booking_checkin.xml
@@ -53,7 +53,7 @@
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
+                android:padding="@dimen/paddingSemiLarge"
                 android:stretchColumns="*">
 
                 <TableRow>
