--- a/app/src/main/res/layout/item_master_part_wajib_layanan.xml
+++ b/app/src/main/res/layout/item_master_part_wajib_layanan.xml
@@ -16,45 +16,6 @@
         android:orientation="vertical">
 
         <android.support.v7.widget.CardView
-            android:id="@+id/cardView_master_part"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
-            android:padding="10dp"
-            app:cardCornerRadius="2dp"
-            app:cardElevation="1dp">
-
-            <ImageButton
-                android:id="@+id/img_delete"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_gravity="end"
-                android:paddingTop="5dp"
-                android:paddingEnd="5dp"
-                android:background="@android:color/transparent"
-                android:tint="@color/grey_80"
-                android:visibility="gone"
-                app:srcCompat="@drawable/ic_close"
-                card_view:ignore="ContentDescription,RtlSymmetry" />
-
-
-            <TextView
-                android:visibility="gone"
-                android:id="@+id/tv_nama_master_part"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="NAMA MASTER PART"
-                android:padding="10dp"
-                android:textSize="16sp"
-                android:textColor="@color/grey_900"
-                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu" />
-            
-            
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -66,6 +27,21 @@
             android:padding="10dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="2dp">
+
+            <ImageButton
+                android:id="@+id/img_delete"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_gravity="end"
+                android:paddingTop="5dp"
+                android:paddingEnd="5dp"
+                android:background="@android:color/transparent"
+                android:tint="@color/grey_80"
+                app:srcCompat="@drawable/ic_close"
+                android:visibility="gone"
+                card_view:ignore="ContentDescription,RtlSymmetry" />
+
+
 
             <TableLayout
                 android:layout_width="match_parent"
@@ -114,7 +90,8 @@
                         android:text="Merk Part"
                         android:textSize="12sp"
                         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                        android:layout_gravity="end"/>
+                        android:layout_gravity="end"
+                        android:layout_marginEnd="@dimen/paddingSemiLarge"/>
 
                 </TableRow>
 
@@ -126,7 +103,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="12sp"
                         android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                        android:text=""
+                        android:text="2"
                         android:layout_gravity="start"/>
 
                 </TableRow>
