--- a/app/src/main/res/layout/item_part_booking3_checkin3.xml
+++ b/app/src/main/res/layout/item_part_booking3_checkin3.xml
@@ -31,12 +31,12 @@
             android:visibility="gone"
             card_view:ignore="ContentDescription,RtlSymmetry" />
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal"
             android:layout_gravity="center"
+            android:padding="@dimen/paddingSemiLarge"
             android:gravity="center">
 
             <TextView
@@ -54,8 +54,7 @@
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:stretchColumns="*"
-                android:padding="15dp">
+                android:stretchColumns="*">
 
                 <TableRow>
 
