--- a/app/src/main/res/layout/activity_atur_pembayaran_.xml
+++ b/app/src/main/res/layout/activity_atur_pembayaran_.xml
@@ -7,7 +7,7 @@
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true">
 
-    <android.support.v4.widget.NestedScrollView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
@@ -113,25 +113,42 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/tl_namaBankEpay"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_medium"
-                    android:textAlignment="center">
+                    android:layout_height="wrap_content">
 
-                    <com.rkrzmail.srv.NikitaAutoComplete
-                        android:id="@+id/et_namaBankEpay"
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/tl_namaBankEpay"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:hint="NAMA BANK / EPAY"
-                        android:inputType="number"
-                        android:textSize="14sp"
-                        android:padding="@dimen/paddingLarge"
-                        android:singleLine="true"/>
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/spacing_medium"
+                        android:textAlignment="center">
 
-                </android.support.design.widget.TextInputLayout>
+                        <com.rkrzmail.srv.NikitaAutoComplete
+                            android:id="@+id/et_namaBankEpay"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:hint="@string/nama_bank_uppercase"
+                            android:inputType="textCapCharacters"
+                            android:textSize="14sp"
+                            android:enabled="false"
+                            android:padding="@dimen/paddingLarge"
+                            android:singleLine="true"/>
+
+                    </android.support.design.widget.TextInputLayout>
+
+
+                    <ProgressBar
+                        android:id="@+id/progress_bar"
+                        style="?android:attr/progressBarStyleSmall"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical|right"
+                        android:layout_marginRight="20dp"
+                        android:visibility="gone" />
+
+                </FrameLayout>
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/tl_ppn"
@@ -276,6 +293,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:enabled="false"
                         android:hint="KEMBALIAN"
                         android:inputType="numberDecimal"
                         android:textSize="14sp" />
@@ -307,6 +325,7 @@
                             android:id="@+id/cb_pelanggan"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:checked="true"
                             android:text="@string/pelanggan_uppercase"/>
 
                         <CheckBox
@@ -368,7 +387,7 @@
 
         </LinearLayout>
 
-    </android.support.v4.widget.NestedScrollView>
+    </ScrollView>
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
