--- a/app/src/main/res/layout/activity_konfirmasi_data_pembayaran.xml
+++ b/app/src/main/res/layout/activity_konfirmasi_data_pembayaran.xml
@@ -247,14 +247,14 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/btn_lanjut"
+                android:id="@+id/btn_simpan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:layout_margin="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@drawable/btn_rounded_accent"
-                android:text="LANJUT"
+                android:text="@string/simpan_uppercase"
                 android:textColor="@android:color/white" />
 
         </LinearLayout>
