--- a/app/src/main/res/layout/activity_cash_collection_.xml
+++ b/app/src/main/res/layout/activity_cash_collection_.xml
@@ -6,7 +6,7 @@
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true">
 
-    <android.support.v4.widget.NestedScrollView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
@@ -61,20 +61,28 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="200dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="3"
                     android:text="TIPE COLLECTION"
                     android:textColor="@color/grey_900"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:textSize="12sp"/>
 
-                <Spinner
-                    android:id="@+id/sp_tipe_cashCollection"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:entries="@array/tipe_collection"/>
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="34dp"
+                    android:layout_weight="6"
+                    android:background="@drawable/background_edittext">
+
+                    <Spinner
+                        android:id="@+id/sp_tipe_cashCollection"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textAlignment="center"
+                        android:entries="@array/tipe_collection"/>
+
+                </RelativeLayout>
 
             </LinearLayout>
 
@@ -86,19 +94,28 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="200dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="3"
                     android:text="NO. REKENING"
                     android:textColor="@color/grey_900"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:textSize="12sp"/>
 
-                <Spinner
-                    android:id="@+id/sp_noRek_cashCollection"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textAlignment="center"/>
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="34dp"
+                    android:layout_weight="6"
+                    android:background="@drawable/background_edittext">
+
+                    <Spinner
+                        android:id="@+id/sp_rek"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textAlignment="center"/>
+
+                </RelativeLayout>
+
 
             </LinearLayout>
 
@@ -113,6 +130,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="NO. TRACE"
+                    android:enabled="false"
                     android:textSize="14sp" />
 
             </android.support.design.widget.TextInputLayout>
@@ -128,7 +146,7 @@
                     android:id="@+id/et_total_cashCollection"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="TOTAL COLLECTION"
+                    android:hint="JUMLAH SETOR"
                     android:inputType="numberDecimal"
                     android:textSize="14sp" />
 
@@ -157,14 +175,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:layout_margin="10dp"
+                android:layout_marginTop="@dimen/paddingLarge"
+                android:layout_marginBottom="@dimen/spacing_large"
                 android:background="@drawable/btn_rounded_accent"
                 android:text="Simpan"
                 android:textColor="@android:color/white" />
 
         </LinearLayout>
 
-    </android.support.v4.widget.NestedScrollView>
+    </ScrollView>
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
