--- a/app/src/main/res/layout/activity_atur_pembayaran_.xml
+++ b/app/src/main/res/layout/activity_atur_pembayaran_.xml
@@ -345,7 +345,8 @@
                             android:layout_height="wrap_content"
                             android:text="@string/checkout_uppercase"
                             android:layout_gravity="start"
-                            android:layout_column="1"/>
+                            android:layout_column="1"
+                            android:checked="true"/>
 
                     </TableRow>
 
