--- a/app/src/main/res/layout/activity_jasa_external.xml
+++ b/app/src/main/res/layout/activity_jasa_external.xml
@@ -19,7 +19,7 @@
             android:padding="@dimen/paddingMedium">
 
             <LinearLayout
-                android:id="@+id/ly_waktu"
+                android:id="@+id/ly_waktu_kerja"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
