--- a/app/src/main/res/layout/activity_jumlah_harga_part_.xml
+++ b/app/src/main/res/layout/activity_jumlah_harga_part_.xml
@@ -121,7 +121,7 @@
                 </android.support.design.widget.TextInputLayout>
 
                 <LinearLayout
-                    android:id="@+id/ly_waktu"
+                    android:id="@+id/ly_waktu_kerja"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
