--- a/app/src/main/res/layout/activity_list_basic_with_fab.xml
+++ b/app/src/main/res/layout/activity_list_basic_with_fab.xml
@@ -27,7 +27,8 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recyclerView"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:layoutAnimation="@anim/layout_animation"/>
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recyclerView2"
