--- a/app/src/main/res/layout/activity_list_basic.xml
+++ b/app/src/main/res/layout/activity_list_basic.xml
@@ -37,7 +37,8 @@
             android:layoutAnimation="@anim/layout_animation"
             android:scrollbars="vertical"
             android:scrollingCache="true"
-            android:layout_marginBottom="20dp"/>
+            android:layout_marginBottom="20dp"
+            android:visibility="gone"/>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
