--- a/app/src/main/res/layout/activity_persetujuanlayanan.xml
+++ b/app/src/main/res/layout/activity_persetujuanlayanan.xml
@@ -50,7 +50,7 @@
                     android:text="Nomor Polisi" />
 
                 <EditText
-                    android:id="@+id/txtNopol"
+                    android:id="@+id/tv_text_suggesttion"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
