--- a/app/src/main/res/layout/item_final_inspection.xml
+++ b/app/src/main/res/layout/item_final_inspection.xml
@@ -99,6 +99,21 @@
 
             </TableRow>
 
+            <TableRow android:layout_marginTop="@dimen/spacing_medium">
+
+                <TextView
+                    android:id="@+id/tv_no_kunci"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="No Kunci"
+                    android:paddingEnd="30dp"
+                    android:textSize="12sp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_gravity="start"
+                    card_view:ignore="RtlSymmetry" />
+
+            </TableRow>
+
         </TableLayout>
 
     </FrameLayout>
