--- a/app/src/main/res/layout/item_kerja_mekanik.xml
+++ b/app/src/main/res/layout/item_kerja_mekanik.xml
@@ -81,6 +81,17 @@
                     android:layout_gravity="start"
                     android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
 
+                <TextView
+                    android:id="@+id/tv_no_kunci"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="No Kunci"
+                    android:textSize="12sp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_gravity="end"
+                    card_view:ignore="RtlSymmetry" />
+
+
             </TableRow>
 
         </TableLayout>
