--- a/app/src/main/res/layout/item_kontrol_layanan.xml
+++ b/app/src/main/res/layout/item_kontrol_layanan.xml
@@ -103,6 +103,17 @@
                     android:layout_gravity="start"
                     card_view:ignore="RtlSymmetry" />
 
+                <TextView
+                    android:id="@+id/tv_no_kunci"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="No Kunci"
+                    android:paddingEnd="30dp"
+                    android:textSize="12sp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_gravity="end"
+                    card_view:ignore="RtlSymmetry" />
+
             </TableRow>
 
             <TableRow android:layout_marginTop="@dimen/spacing_medium">
