--- a/app/src/main/res/layout/activity_checkin.xml
+++ b/app/src/main/res/layout/activity_checkin.xml
@@ -47,7 +47,7 @@
             android:layout_height="wrap_content">
 
             <EditText
-                android:id="@+id/txtNopol"
+                android:id="@+id/tv_text_suggesttion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
