--- a/app/src/main/res/layout/activity_layanan_item3.xml
+++ b/app/src/main/res/layout/activity_layanan_item3.xml
@@ -27,7 +27,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/txtNopol"
+                android:id="@+id/tv_text_suggesttion"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="2"
