--- a/app/src/main/res/layout/item_pembayaran.xml
+++ b/app/src/main/res/layout/item_pembayaran.xml
@@ -38,6 +38,16 @@
                     android:textSize="12sp"
                     android:layout_gravity="start"/>
 
+                <TextView
+                    android:id="@+id/tv_no_kunci"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="No Kunci"
+                    android:textSize="12sp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:layout_gravity="end"
+                    card_view:ignore="RtlSymmetry" />
+
 
             </TableRow>
 
