--- a/app/src/main/res/layout/activity_biaya_jasa_.xml
+++ b/app/src/main/res/layout/activity_biaya_jasa_.xml
@@ -202,13 +202,13 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp">
 
                 <android.support.design.widget.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp">
+                    android:layout_height="wrap_content">
 
                     <com.rkrzmail.srv.NikitaAutoComplete
                         android:id="@+id/et_biaya_biayaJasa"
@@ -228,9 +228,7 @@
                     android:background="@android:color/transparent"
                     app:srcCompat="@drawable/ic_close"
                     android:tint="@color/grey_80"
-                    android:visibility="gone"
-                    android:layout_marginTop="11dp"
-                    android:layout_marginStart="300dp"/>
+                    android:layout_gravity="end|center_vertical"/>
 
             </FrameLayout>
 
