--- a/app/src/main/res/layout/activity_detail_kerja_mekanik.xml
+++ b/app/src/main/res/layout/activity_detail_kerja_mekanik.xml
@@ -42,6 +42,15 @@
                     android:background="@drawable/btn_rounded_accent"
                     android:textColor="@android:color/white"/>
 
+                <Button
+                    android:id="@+id/btn_lkk"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/lkk_claim_uppercase"
+                    android:background="@drawable/btn_rounded_accent"
+                    android:textColor="@android:color/white"/>
+
 
             </LinearLayout>
 
